the calculator works!

--- a/dom-calculator-starter-code/calc.html
+++ b/dom-calculator-starter-code/calc.html
@@ -2,10 +2,8 @@
 <html>
 	<head>
 		<title>Sparta Calculator</title>
+		<script type="text/javascript" src = "js/calc2.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/calc.css">
-		<script type="text/javascript" src = "js/calc.js">
-
-		</script>
 	</head>
 	<body>
 		<div id="container">
@@ -28,6 +26,5 @@
 			<button class="equals" value="=">=</button>
 			<button class="operator" value="+">+</button>
 		</div>
-		<script src="js/calc.js"></script>
 	</body>
 </html>
